InsuranceOrg/force-app/main/default/objects/vlocity_ins__Jurisdiction__c/vlocity_ins__Jurisdiction__c.object-meta.xml
<CustomObject>
    <description>Defines the geographic area over which authority extend; legal authority; the authority to hear and determine causes of action.</description>
    <label>Jurisdiction</label>
    <nameField>
        <label>Jurisdiction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jurisdictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>