InsuranceOrg/force-app/main/default/objects/vlocity_ins__Jurisdiction__c/fields/vlocity_ins__County__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__County__c</fullName>
    <description>Name of Jurisdiction&apos;s county.</description>
    <label>County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>