InsuranceOrg/force-app/main/default/objects/vlocity_ins__Jurisdiction__c/fields/vlocity_ins__CountyCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CountyCode__c</fullName>
    <description>The county code for the Jurisdiction. For example Federal Information Processing System (FIPS) County Code.</description>
    <label>County Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>