InsuranceOrg/force-app/main/default/objects/vlocity_ins__Jurisdiction__c/fields/vlocity_ins__ParentJurisdictionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ParentJurisdictionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the Parent Jurisdiction.</description>
    <label>Parent Jurisdiction</label>
    <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
    <relationshipLabel>Jurisdictions</relationshipLabel>
    <relationshipName>Jurisdictions</relationshipName>
    <type>Lookup</type>
</CustomField>