InsuranceOrg/force-app/main/default/objects/vlocity_ins__Jurisdiction__c/fields/vlocity_ins__RatingArea__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RatingArea__c</fullName>
    <description>Identifier that represents a Rating Area.</description>
    <label>Rating Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>