InsuranceOrg/force-app/main/default/objects/vlocity_ins__Jurisdiction__c/fields/vlocity_ins__StatesProvinces__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StatesProvinces__c</fullName>
    <description>ISO codes for State/Province for the Jurisdiction.</description>
    <label>States/Provinces</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ins__VlocityStateProvince</valueSetName>
    </valueSet>
</CustomField>